--- a/themes/piko/assets/sass/nav.scss
+++ b/themes/piko/assets/sass/nav.scss
@@ -7,7 +7,9 @@
 }
 @media (min-width: 0px) and (max-width: 400px) {
   nav.desktop {
-    padding: 0 0.25rem;
+    padding: 0;
+    padding-left: 0.3rem;
+    padding-right: 2rem;
   }
 }
 @media (min-width: 0px) and (max-width: 576px) {
@@ -85,6 +87,7 @@ nav {
     color: var(--secondary);
   }
 }
+
 
 .mobile-navigation > li > button > svg {
   width: 30px;
